--- a/.github/workflows/build-and-push-docker-image.yml
+++ b/.github/workflows/build-and-push-docker-image.yml
@@ -1,27 +1,26 @@
-name: Build and push Docker image
+name: Build and Push Docker Image
 
 on:
   push:
     branches:
       - master
 
-env:
-  DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-  DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-  IMAGE_NAME: finalpi/wechat2tg
-
 jobs:
-  build:
+  build-and-push:
     runs-on: ubuntu-latest
-
+    env:
+      DOCKER_USERNAME: finalpi
+      DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
+      - uses: actions/checkout@v2
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ env.DOCKER_USERNAME }}
+          password: ${{ env.DOCKER_PASSWORD }}
       - name: Build and push Docker image
         uses: docker/build-push-action@v2
         with:
           context: .
           push: true
-          tags: ${{ env.IMAGE_NAME }}:latest
-          builder: docker://node:16
+          tags: ${{ env.DOCKER_USERNAME }}/wechat2tg:latest
