--- a/.github/workflows/build-and-push-docker-image.yml
+++ b/.github/workflows/build-and-push-docker-image.yml
@@ -3,24 +3,27 @@ name: Build and Push Docker Image
 on:
   push:
     branches:
-      - master
+      - 'master'
 
 jobs:
-  build-and-push:
+  docker:
     runs-on: ubuntu-latest
-    env:
-      DOCKER_USERNAME: finalpi
-      DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
     steps:
-      - uses: actions/checkout@v2
-      - name: Login to Docker Hub
+      -
+        name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      -
+        name: Login to DockerHub
         uses: docker/login-action@v1
         with:
-          username: ${{ env.DOCKER_USERNAME }}
-          password: ${{ env.DOCKER_PASSWORD }}
-      - name: Build and push Docker image
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      -
+        name: Build and push
         uses: docker/build-push-action@v2
         with:
-          context: .
           push: true
-          tags: ${{ env.DOCKER_USERNAME }}/wechat2tg:latest
+          tags: finalpi/wechat2tg:latest
