--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "qrcode": "^1.5.1",
     "socks-proxy-agent": "^7.0.0",
     "wechaty": "^1.20.2",
-    "wechaty-puppet-wechat": "^1.18.4"
+    "wechaty-puppet-wechat4u": "^1.14.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.6.1",
