--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,12 +5,12 @@ services:
     image: finalpi/wechat2tg:latest
     container_name: wx2tg
     environment:
-      - BOT_TOKEN='6072042341:AAFhsiuzt0NNysKQas3K-hZkoRphc9jtyNA'
-      - HOST='10.19.10.169'
-      - PORT='7890'
+      - BOT_TOKEN=''
+      - HOST=''
+      - PORT=''
       # 代理种类
       - PROTOCOL='socks5'
       # 用户名密码可选
-      # - USERBNANE=
+      # - USERNAME=
       # - PASSWORD=
     restart: unless-stopped
