--- a/package.json
+++ b/package.json
@@ -1,33 +1,31 @@
 {
   "name": "wechat2tg",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "simple kit send wechat message to telegram",
+  "main": "app.js",
+  "esModuleInterop": true,
   "scripts": {
-    "start": "node src/main.js"
+    "kit": "ts-node src/simple-kit/main.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "module",
   "dependencies": {
     "dotenv": "^16.0.3",
-    "node-telegram-bot-api": "^0.61.0",
     "qrcode": "^1.5.1",
-    "socks-proxy-agent": "^7.0.0",
+    "telegraf": "^4.12.2",
+    "ts-node": "^10.9.1",
     "wechaty": "^1.20.2",
-    "wechaty-puppet-wechat": "^1.14.1"
+    "wechaty-puppet-wechat": "^1.18.4",
+    "wechaty-puppet-wechat4u": "^1.14.14"
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.6.1",
-    "@commitlint/config-conventional": "^17.6.1",
-    "@commitlint/prompt-cli": "^17.6.1",
-    "@typescript-eslint/eslint-plugin": "^5.58.0",
-    "eslint": "^8.38.0",
-    "eslint-config-standard-with-typescript": "^34.0.1",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-n": "^15.7.0",
-    "eslint-plugin-promise": "^6.1.1",
+    "@types/qrcode": "^1.5.5",
+    "@typescript-eslint/eslint-plugin": "^5.59.0",
+    "@typescript-eslint/parser": "^5.59.0",
+    "eslint": "^8.39.0",
+    "eslint-config-xo": "^0.43.1",
+    "eslint-config-xo-typescript": "^0.57.0",
     "typescript": "^5.0.4"
   }
 }
