1.新增代理配置

--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.0.3",
+    "https-proxy-agent": "^7.0.4",
     "qrcode": "^1.5.1",
+    "socks-proxy-agent": "^7.0.0",
     "telegraf": "^4.12.2",
     "ts-node": "^10.9.1",
     "wechaty": "^1.20.2",
