--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "app.ts",
   "esModuleInterop": true,
   "scripts": {
-    "kit-dev": "ts-node src/app.ts",
-    "bot-test": "ts-node src/test/tgKeyboardTest.ts",
+    "dev": "ts-node src/app.ts",
+    "bot-test": "ts-node-dev src/test/tgKeyboardTest.ts",
     "build": "tsc",
     "start": "tsc && node dist/app.js"
   },
@@ -33,6 +33,7 @@
     "eslint": "^8.39.0",
     "eslint-config-xo": "^0.43.1",
     "eslint-config-xo-typescript": "^0.57.0",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.0.4"
   }
 }
