--- a/.github/workflows/build-and-push-docker-image.yml
+++ b/.github/workflows/build-and-push-docker-image.yml
@@ -3,7 +3,7 @@ name: Build and Push Docker Image
 on:
   push:
     branches:
-      - 'master'
+      - 'refactor/ts-single-dev'
 jobs:
   docker:
     runs-on: ubuntu-latest
@@ -25,4 +25,4 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: finalpi/wechat2tg:latest
+          tags: finalpi/wechat2tg-dev:latest
