--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     image: finalpi/wechat2tg:latest
     container_name: wx2tg
     volumes:
-      - ./storage:/app/config
+      - ./config:/app/storage
     environment:
       - BOT_TOKEN=
       # - PROXY_HOST=
