modify:build-and-push-docker-image.yml

--- a/.github/workflows/build-and-push-docker-image.yml
+++ b/.github/workflows/build-and-push-docker-image.yml
@@ -5,9 +5,12 @@ on:
     branches:
       - 'refactor/ts-single-dev'
 jobs:
-  docker:
+  build-and-push:
     runs-on: ubuntu-latest
     steps:
+      -
+        name: Checkout code
+        uses: actions/checkout@v2
       -
         name: Set up QEMU
         uses: docker/setup-qemu-action@v1
@@ -24,5 +27,8 @@ jobs:
         name: Build and push
         uses: docker/build-push-action@v2
         with:
+          context: .
+          file: ./Dockerfile
           push: true
           tags: finalpi/wechat2tg-dev:latest
+          platforms: linux/amd64,linux/arm64,linux/arm/v7
