--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "qrcode": "^1.5.1",
     "simple-xml-to-json": "^1.2.2",
     "socks-proxy-agent": "^7.0.0",
+    "sqlite3": "^5.1.7",
     "telegraf": "^4.12.2",
     "telegram": "^2.21.2",
     "ts-node": "^10.9.1",
