--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "ffmpeg-static": "^5.2.0",
     "fluent-ffmpeg": "^2.1.2",
     "https-proxy-agent": "^7.0.4",
+    "lottie-converter": "^1.0.0",
+    "node-7z": "^3.0.0",
     "qrcode": "^1.5.1",
     "simple-xml-to-json": "^1.2.2",
     "socks-proxy-agent": "^7.0.0",
@@ -30,6 +32,7 @@
     "wechaty-puppet-wechat4u": "^1.14.14"
   },
   "devDependencies": {
+    "@types/node-7z": "^2.1.8",
     "@types/qrcode": "^1.5.5",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
@@ -37,6 +40,7 @@
     "eslint-config-xo": "^0.43.1",
     "eslint-config-xo-typescript": "^0.57.0",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.0.4"
+    "typescript": "^5.0.4",
+    "lottie-converter": "^1.0.0"
   }
 }
