--- a/.env
+++ b/.env
@@ -6,6 +6,6 @@ PROXY_HOST=
 PROXY_PORT=
 PROXY_USERNAME=
 PROXY_PASSWORD=
-# 发送大文件所需Telegram API配置(可选)
+# Telegram API配置(可选:发送大文件,自动创建group分组所需)
 API_ID=
 API_HASH=
