--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "ts-md5": "^1.3.1",
     "ts-node": "^10.9.1",
     "wechaty": "^1.20.2",
-    "wechaty-puppet-wechat4u": "^1.14.14"
+    "wechaty-puppet-wechat4u": "https://github.com/areidx/puppet-wechat4u/releases/download/v1.14.23/wechaty-puppet-wechat4u-1.14.19.tgz"
   },
   "devDependencies": {
     "@types/node-7z": "^2.1.8",
@@ -39,8 +39,8 @@
     "eslint": "^8.39.0",
     "eslint-config-xo": "^0.43.1",
     "eslint-config-xo-typescript": "^0.57.0",
+    "lottie-converter": "^1.0.0",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.0.4",
-    "lottie-converter": "^1.0.0"
+    "typescript": "^5.0.4"
   }
 }
