--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "dotenv": "^16.0.3",
     "ffmpeg-static": "^5.2.0",
@@ -29,7 +29,7 @@
     "ts-md5": "^1.3.1",
     "ts-node": "^10.9.1",
     "wechaty": "^1.20.2",
-    "wechaty-puppet-wechat4u": "https://github.com/areidx/puppet-wechat4u/releases/download/v1.14.23/wechaty-puppet-wechat4u-1.14.19.tgz"
+    "wechaty-puppet-wechat4u": "https://github.com/areidx/puppet-wechat4u/releases/download/v1.14.15/wechaty-puppet-wechat4u-1.14.15.tgz"
   },
   "devDependencies": {
     "@types/node-7z": "^2.1.8",
