Modify: 保存文件挂载

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     container_name: wx2tg
     volumes:
       - ./config:/app/storage
+      - ./save-files:/app/save-files # 保存文件夹挂载后表情不需要重新转换
     environment:
       - BOT_TOKEN=
       # - PROXY_HOST=
