--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "app.ts",
   "esModuleInterop": true,
   "scripts": {
-    "dev": "ts-node src/app.ts",
+    "dev": "NODE_ENV=development ts-node src/app.ts",
     "bot-test": "ts-node-dev src/test/tgKeyboardTest.ts",
     "build": "tsc",
-    "start": "tsc && node dist/app.js"
+    "start": "NODE_ENV=production tsc && node dist/app.js"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +18,7 @@
     "ffmpeg-static": "^5.2.0",
     "fluent-ffmpeg": "^2.1.2",
     "https-proxy-agent": "^7.0.4",
+    "log4js": "^6.9.1",
     "lottie-converter": "^1.0.0",
     "node-7z": "^3.0.0",
     "qrcode": "^1.5.1",
