--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.ts",
   "esModuleInterop": true,
   "scripts": {
-    "dev": "ts-node src/app.ts NODE_ENV=production",
+    "dev": "ts-node src/app.ts NODE_ENV=development",
     "bot-test": "ts-node-dev src/test/tgKeyboardTest.ts",
     "build": "tsc",
     "start": "tsc && node dist/app.js NODE_ENV=production"
