--- a/.github/workflows/build-and-push-docker-image.yml
+++ b/.github/workflows/build-and-push-docker-image.yml
@@ -12,6 +12,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      # 获取 GitHub Actions 的运行编号作为版本号
+      - name: Get run number
+        id: version
+        run: echo "::set-output name=version::${GITHUB_RUN_NUMBER}"
+
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
 
@@ -38,7 +43,7 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: finalpi/wechat2tg-dev:latest
+          tags: finalpi/wechat2tg-dev:${{ steps.version.outputs.version }}, finalpi/wechat2tg-dev:latest
           platforms: linux/amd64
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,mode=max,dest=/tmp/.buildx-cache
