MODIFY: 去掉7z的依赖

--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "7zip-min": "^1.4.4",
     "dotenv": "^16.0.3",
     "ffmpeg-static": "^5.2.0",
     "fluent-ffmpeg": "^2.1.2",
     "https-proxy-agent": "^7.0.4",
     "log4js": "^6.9.1",
     "lottie-converter": "^1.0.0",
-    "node-7z": "^3.0.0",
     "qrcode": "^1.5.1",
     "simple-xml-to-json": "^1.2.2",
     "socks-proxy-agent": "^7.0.0",
