--- a/.env
+++ b/.env
@@ -9,3 +9,16 @@ PROXY_PASSWORD=
 # Telegram API配置(可选:发送大文件,自动创建group分组所需)
 API_ID=
 API_HASH=
+# 消息格式配置:(${alias}:联系人备注,${name}:联系人昵称,${topic}:群聊昵称,${alias_first}:备注优先,如果没有备注就显示联系人的昵称)
+## 群消息格式
+ROOM_MESSAGE='<i>🌐${simpleMessage.room}</i> ---- <b>👤[${alias}] ${name} :</b>'
+## 公众号消息格式
+OFFICIAL_MESSAGE='<b>📣${name} :</b>'
+## 联系人消息格式
+CONTACT_MESSAGE='<b>👤${alias_first} :  </b>'
+## 群消息格式(群组下)
+ROOM_MESSAGE_GROUP='<b>👤[${alias}] ${name} :</b>'
+## 公众号消息格式(群组下)
+OFFICIAL_MESSAGE_GROUP='<b>📣{name} :</b>'
+## 联系人消息格式(群组下)
+CONTACT_MESSAGE_GROUP='<b>👤${alias_first} :  </b>'
