Modify: 去你吗的外包代码

--- a/wechat2t..env
+++ b/wechat2t..env
@@ -12,15 +12,15 @@ API_HASH=
 # sqlite数据库路径(可选) 默认storage/db/wechat2Tg.db
 DB_SQLITE_PATH=
 # 消息格式配置:(${alias}:联系人备注,${name}:联系人昵称,${topic}:群聊昵称,${alias_first}:备注优先,如果没有备注就显示联系人的昵称)
-## 群消息格式
-ROOM_MESSAGE="<i>${topic}</i> ---- <b>${alias_first}: </b>"
-## 公众号消息格式
-OFFICIAL_MESSAGE="<b>📣${name}: </b>"
-## 联系人消息格式
-CONTACT_MESSAGE="<b>${alias_first}: </b>"
-## 群消息格式(群组下)
-ROOM_MESSAGE_GROUP="<b>${alias_first}: </b>"
-## 公众号消息格式(群组下)
-OFFICIAL_MESSAGE_GROUP="<b>📣{name}: </b>"
-## 联系人消息格式(群组下)
-CONTACT_MESSAGE_GROUP="<b>${alias_first}: </b>"
+## 群消息格式  这里不好改 想改自己去src/config.ts 里面改
+#ROOM_MESSAGE="<i>${topic}</i> ---- <b>${alias_first}: </b>"
+### 公众号消息格式
+#OFFICIAL_MESSAGE="<b>📣${name}: </b>"
+### 联系人消息格式
+#CONTACT_MESSAGE="<b>${alias_first}: </b>"
+### 群消息格式(群组下)
+#ROOM_MESSAGE_GROUP="<b>${alias_first}: </b>"
+### 公众号消息格式(群组下)
+#OFFICIAL_MESSAGE_GROUP="<b>📣{name}: </b>"
+### 联系人消息格式(群组下)
+#CONTACT_MESSAGE_GROUP="<b>${alias_first}: </b>"
