UPDATE: ADD short-description

--- a/.github/workflows/build-and-push-docker-image.yml
+++ b/.github/workflows/build-and-push-docker-image.yml
@@ -59,3 +59,4 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
           repository: finalpi/wechat2tg
           readme-filepath: ./README_zh.md
+          short-description: 'telegram收发微信消息'
