--- a/.github/workflows/build-and-push-docker-image.yml
+++ b/.github/workflows/build-and-push-docker-image.yml
@@ -53,5 +53,6 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-          repository: finalpi/wechat2tg-dev
-          description-file: ./README_zh.md
+          repository: finalpi/wechat2tg
+          readme-filepath: ./README_zh.md
+          short-description: 'telegram收发微信消息'
