--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "wechat2tg",
-  "version": "1.0.0",
-  "description": "simple kit send wechat message to telegram",
+  "version": "v1.10.0",
+  "description": "简单的转发微信消息到Telegram",
   "main": "app.ts",
   "esModuleInterop": true,
   "scripts": {
