Fixed: 代碼錯誤, 清除部分代碼

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "target": "ES2021",
     "module": "CommonJS",
     "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
     "strict": false,
     "outDir": "dist",
     "rootDir": "src",
