--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "app.ts",
   "esModuleInterop": true,
   "scripts": {
-    "dev": "ts-node src/app.ts NODE_ENV=development",
-    "bot-test": "ts-node-dev src/test/tgKeyboardTest.ts",
+    "dev": "tsc && node dist/app.js NODE_ENV=development",
     "build": "tsc",
     "start": "tsc && node dist/app.js NODE_ENV=production"
   },
@@ -33,7 +32,7 @@
     "ts-md5": "^1.3.1",
     "ts-node": "^10.9.1",
     "wechaty": "^1.20.2",
-    "wechaty-puppet-wechat4u": "https://github.com/areidx/puppet-wechat4u/releases/download/v1.14.22/wechaty-puppet-wechat4u-1.14.22.tgz"
+    "wechaty-puppet-wechat4u": "https://github.com/Nimbly8836/puppet-wechat4u/releases/download/v1.14.24/wechaty-puppet-wechat4u-1.14.24.tgz"
   },
   "devDependencies": {
     "@types/node-7z": "^2.1.8",
