--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "ts-md5": "^1.3.1",
     "ts-node": "^10.9.1",
     "wechaty": "^1.20.2",
-    "wechaty-puppet-wechat4u": "https://github.com/Nimbly8836/puppet-wechat4u/releases/download/v1.14.24/wechaty-puppet-wechat4u-1.14.24.tgz"
+    "wechaty-puppet-wechat4u": "file:../../WebstormProjects/puppet-wechat4u/wechaty-puppet-wechat4u-1.14.24.tgz",
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
     "@types/node-7z": "^2.1.8",
