--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wechat2tg",
-  "version": "1.10.0",
+  "version": "v1.1.5",
   "description": "simple kit send wechat message to telegram",
   "main": "app.ts",
   "esModuleInterop": true,
