--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "puppeteer": "^22.15.0",
     "puppeteer-lottie": "^1.1.2",
     "qrcode": "^1.5.1",
+    "sharp": "^0.33.4",
     "simple-xml-to-json": "^1.2.2",
     "socks-proxy-agent": "^7.0.0",
     "sqlite3": "^5.1.7",
