--- a/.github/workflows/build-and-push-docker-image.yml
+++ b/.github/workflows/build-and-push-docker-image.yml
@@ -1,10 +1,9 @@
 name: Build and Push Docker Image
 
 on:
-  workflow_dispatch:
   push:
-    tags:
-      - v*
+    branches:
+      - 'refactor/ts-single-dev'
 
 jobs:
   build-and-push:
@@ -13,6 +12,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      # 获取 GitHub Actions 的运行编号作为版本号
+      - name: Get run number
+        id: version
+        run: echo "::set-output name=version::${GITHUB_RUN_NUMBER}"
+
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
 
@@ -20,24 +24,10 @@ jobs:
         uses: docker/setup-buildx-action@v3
 
       - name: Login to DockerHub
-        uses: docker/login-action@v2
+        uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-
-      #      - name: Create cache directory
-      #        run: mkdir -p /tmp/.buildx-cache
-      #
-      #      - name: Cache Docker layers
-      #        uses: actions/cache@v2
-      #        with:
-      #          path: /tmp/.buildx-cache
-      #          key: ${{ runner.os }}-buildx-${{ github.sha }}
-      #          restore-keys: |
-      #            ${{ runner.os }}-buildx-
-
-      - name: Generate App Version
-        run: echo APP_VERSION=`git describe --tags --always` >> $GITHUB_ENV
 
       - name: Build and push
         uses: docker/build-push-action@v5
@@ -45,18 +35,5 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: |
-            finalpi/wechat2tg:latest
-            finalpi/wechat2tg:${{ env.APP_VERSION }}
-          platforms: linux/amd64,linux/arm64/v8,linux/arm/v7
-      #          cache-from: type=local,src=/tmp/.buildx-cache
-      #          cache-to: type=local,mode=max,dest=/tmp/.buildx-cache
-
-      - name: Docker Hub Description
-        uses: peter-evans/dockerhub-description@v4
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-          repository: finalpi/wechat2tg
-          readme-filepath: ./README_zh.md
-          short-description: 'telegram收发微信消息'
+          tags: finalpi/wechat2tg-dev:${{ steps.version.outputs.version }}, finalpi/wechat2tg-dev:latest
+          platforms: linux/amd64
