ADD: 自定义消息显示格式和创建的群组名称格式

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,4 +34,10 @@ services:
       OFFICIAL_MESSAGE_GROUP: '<b>📣#[name]: </b>'
       # 联系人消息格式(群组下)
       CONTACT_MESSAGE_GROUP: '<b>👤#[alias_first]: </b>'
+      # 自动创建微信群组的名称格式
+      CREATE_ROOM_NAME: '#[topic]'
+      # 自动创建联系人群组的名称格式
+      CREATE_CONTACT_NAME: '#[alias]#[[name]]'
+      # 文字消息显示格式:#[identity]身份文本,#[body]:消息文本,#[br]换行
+      MESSAGE_DISPLAY: '#[identity]#[br]#[body]'
     restart: unless-stopped
