ADD: 自动语音转文字

--- a/.env
+++ b/.env
@@ -9,6 +9,9 @@ PROXY_PASSWORD=
 # Telegram API配置(可选:发送大文件,自动创建group分组所需)
 API_ID=
 API_HASH=
+# 腾讯云ASR配置
+TENCENT_SECRET_ID=
+TENCENT_SECRET_KEY=
 # sqlite数据库路径(可选) 默认storage/db/wechat2Tg.db
 DB_SQLITE_PATH=
 # 自定义消息模板配置:(#[alias]:联系人备注,#[name]:联系人昵称,#[topic]:群聊昵称,#[alias_first]:备注优先,如果没有备注就显示联系人的昵称)
