--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "socks-proxy-agent": "^7.0.0",
     "sqlite3": "^5.1.7",
     "telegraf": "^4.12.2",
-    "telegram": "^2.21.2",
+    "telegram": "2.21.2",
     "tencentcloud-sdk-nodejs": "^4.0.977",
     "ts-md5": "^1.3.1",
     "ts-node": "^10.9.1",
