WIP: 接入 openAI API 自动回复

--- a/.env
+++ b/.env
@@ -33,3 +33,7 @@ CREATE_ROOM_NAME='#[topic]'
 CREATE_CONTACT_NAME='#[alias]#[[name]]'
 ## 文字消息显示格式:#[identity]身份文本,#[body]:消息文本,#[br]换行
 MESSAGE_DISPLAY='#[identity]#[br]#[body]'
+## OPENAI
+OPENAI_API_KEY=''
+OPENAI_HOST='https://api.openai.com'
+OPENAI_MODEL='gpt-3.5-turbo'
