--- a/.github/workflows/build-and-push-docker-image.yml
+++ b/.github/workflows/build-and-push-docker-image.yml
@@ -1,9 +1,9 @@
 name: Build and Push Docker Image
 
-on:
-  push:
-    branches:
-      - 'refactor/ts-single-dev'
+#on:
+#  push:
+#    branches:
+#      - 'refactor/ts-single-dev'
 
 jobs:
   build-and-push:
