--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.0.3",
     "ffmpeg-static": "^5.2.0",
     "fluent-ffmpeg": "^2.1.2",
+    "gewechaty": "^0.0.22",
     "https-proxy-agent": "^7.0.4",
     "jsdom": "^24.1.0",
     "log4js": "^6.9.1",
@@ -32,8 +33,6 @@
     "tencentcloud-sdk-nodejs": "^4.0.977",
     "ts-md5": "^1.3.1",
     "ts-node": "^10.9.1",
-    "wechaty": "^1.20.2",
-    "wechaty-puppet-wechat4u": "https://github.com/Nimbly8836/puppet-wechat4u/releases/download/v1.14.27/wechaty-puppet-wechat4u-1.14.27.tgz",
     "xml2js": "^0.6.2"
   },
   "devDependencies": {
