--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.ts",
   "esModuleInterop": true,
   "scripts": {
-    "dev": " NODE_ENV=development ts-node src/app.ts",
+    "dev": "ts-node src/app.ts",
     "build": "tsc",
     "start": "NODE_ENV=production tsc && node dist/app.js"
   },
@@ -18,12 +18,13 @@
     "dotenv": "^16.0.3",
     "ffmpeg-static": "^5.2.0",
     "fluent-ffmpeg": "^2.1.2",
-    "gewechaty": "^0.0.22",
+    "gewechaty": "^0.0.21",
     "https-proxy-agent": "^7.0.4",
     "jsdom": "^24.1.0",
     "log4js": "^6.9.1",
     "nodejs-snowflake": "^2.0.1",
     "qrcode": "^1.5.1",
+    "reflect-metadata": "^0.2.2",
     "sharp": "^0.33.4",
     "simple-xml-to-json": "^1.2.2",
     "socks-proxy-agent": "^7.0.0",
@@ -33,6 +34,7 @@
     "tencentcloud-sdk-nodejs": "^4.0.977",
     "ts-md5": "^1.3.1",
     "ts-node": "^10.9.1",
+    "typeorm": "^0.3.20",
     "xml2js": "^0.6.2"
   },
   "devDependencies": {
