--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,51 +9,5 @@ services:
       - ./save-files:/app/save-files # 保存文件夹挂载后表情不需要重新转换
       - ./logs:/app/logs # 日志文件夹
     # use env file or you can jest set environment here
-    # env_file: ".env"
-    environment:
-      BOT_TOKEN:   # Required  必须配置
-      # PROXY_HOST: ''
-      # PROXY_PORT: ''
-      # 代理类型:socks5,http,https
-      # PROXY_PROTOCOL: 'socks5'
-      # 用户名密码可选
-      # PROXY_USERNAME: ''
-      # PROXY_PASSWORD: ''
-      # 发送大文件所需Telegram API配置(可选)
-      API_ID: ''
-      API_HASH: ''
-      # 群消息格式
-      ROOM_MESSAGE: '<i>🌐#[topic]</i> ---- <b>👤#[(alias)] #[name]: </b>'
-      # 公众号消息格式
-      OFFICIAL_MESSAGE: '<b>📣#[name]: </b>'
-      # 联系人消息格式
-      CONTACT_MESSAGE: '<b>👤#[alias_first]: </b>'
-      # 群消息格式(群组下)
-      ROOM_MESSAGE_GROUP: '<b>👤#[(alias)] #[name]: </b>'
-      # 公众号消息格式(群组下)
-      OFFICIAL_MESSAGE_GROUP: '<b>📣#[name]: </b>'
-      # 联系人消息格式(群组下)
-      CONTACT_MESSAGE_GROUP: '<b>👤#[alias_first]: </b>'
-      # 自动创建微信群组的名称格式
-      CREATE_ROOM_NAME: '#[topic]'
-      # 自动创建联系人群组的名称格式
-      CREATE_CONTACT_NAME: '#[alias]#[[name]]'
-      # 文字消息显示格式:#[identity]身份文本,#[body]:消息文本,#[br]换行
-      MESSAGE_DISPLAY: '#[identity]#[br]#[body]'
-      # 腾讯语音识别控制台申请的API_KEY(可选)
-      TENCENT_SECRET_ID: ''
-      TENCENT_SECRET_KEY: ''
-      # OPENAI
-      ## APIKEY
-      OPENAI_API_KEY: ''
-      ## OPENAI 接口地址
-      OPENAI_HOST: 'https://api.openai.com'
-      ## 模型
-      OPENAI_MODEL: 'gpt-3.5-turbo'
-      ## 系统提示词，可以让 GPT 扮演各种角色
-      OPENAI_SYSTEM_PROMPT: ''
-      ## 指定单句 token 上限
-      OPENAI_MAX_TOKENS: 150
-      ## 指定随机性
-      OPENAI_TEMPERATURE: 0.7
+    env_file: ".env"
     restart: unless-stopped
