--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "ts-md5": "^1.3.1",
     "ts-node": "^10.9.1",
     "typeorm": "^0.3.20",
+    "wechaty": "^1.20.2",
+    "wechaty-puppet-wechat4u": "https://github.com/finalpi/puppet-wechat4file/releases/download/1.14.27/wechaty-puppet-wechat4u-1.14.27.tgz",
     "xml2js": "^0.6.2"
   },
   "devDependencies": {
