--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,7 @@
 BOT_TOKEN=
+# Telegram API配置
+API_ID=
+API_HASH=
 # 代理配置(可选)
 # 协议socks5,http,https
 #PROXY_PROTOCOL=socks5
@@ -6,9 +9,6 @@ BOT_TOKEN=
 #PROXY_PORT=
 PROXY_USERNAME=
 PROXY_PASSWORD=
-# Telegram API配置(可选:发送大文件,自动创建group分组所需)
-API_ID=
-API_HASH=
 # 自定义消息模板配置:(#[alias]:联系人备注,#[name]:联系人昵称,#[topic]:群聊昵称,#[alias_first]:备注优先,如果没有备注就显示联系人的昵称)
 ## 群消息格式
 ROOM_MESSAGE='<i>🌐#[topic]</i> ---- <b>👤#[(alias)] #[name]: </b>'
