--- a/.github/workflows/build-and-push-docker-image.yml
+++ b/.github/workflows/build-and-push-docker-image.yml
@@ -57,6 +57,6 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-          repository: finalpi/wechat2tg
+          repository: finalpi/wechat2tg-pad
           readme-filepath: ./README.md
           short-description: 'telegram收发微信消息'
